tests/NormalTests/paczka2/big_fuzzy/84613750.err
Error in line 20: Cy8oFN9b1O S75' 4',5
Error in line 13: R2joTcWdm7E S838 186,6
Error in line 35: NbMAwDFldFF A161 56,2
Error in line 48: CUkr2u45l4 S838 30,1
Error in line 28: Cy8oFN9b1O S752 203,1
Error in line 61: CUkr2u45l4 S838 433,3
Error in line 54: NbMAwDFldFF A944 13,0
Error in line 69: A944 S838 90,1
Error in line 65: NbMAwDFldFF S752 10,8
Error in line 73: IgXpQ A944 -1,1
Error in line 71: A944 A944 58,1
Error in line 75: A944 S752 28,2
Error in line 68: IgXpQ A944 44,7
Error in line 97: CUkr2u45l4 Ak44 30,0
Error in line 98: AQiEJ63Yc3Y A161 20,63
Error in line 95: CUkr2u45l4 S752 81,8
Error in line 107: A944 S838 31,7
Error in line 108: A944 S752 95,7
Error in line 99: CUkr2u45l4 A944 81,3
Error in line 111: CUkr2u45l4 S752 57,4
Error in line 109: A944 A944 58,3
Error in line 112: CUkr2u45l4 S838 50,7
Error in line 110: Cy8oFN9b1O S838 0,3
Error in line 120: A944 S838 154,4
Error in line 134: AQiEJ|3Yc3Y A1|1 158,2
Error in line 125: IgXpQ A161 220,8
Error in line 138: R2joTcWdm7E A161 83,4
Error in line 141: R2joTcWdm7E A944 45,8
Error in line 140: IgXpQ A944 240,1
Error in line 145: R2joTcWdm7E A161 -1,1
Error in line 146: IgXpQ S838 -6,7
Error in line 147: AQiEJ63Yc3Y S752 43,7
Error in line 149: AQiEJ63Yc3Y A161 7,7
Error in line 170: IgXpQ S838 152,0
Error in line 142: R2joTcWdm7E A161 89,8
Error in line 186: R2joTcWdm7E A944 18,0
Error in line 187: R2joTcWdm7E A161 73,6
Error in line 194: R2joTcWdm7E A944 6,9
Error in line 189: Cy8oFN9b1O A161 3,9
Error in line 201: A944 A944 18,1
Error in line 205: NbMAwDFldFF S752 38,1
Error in line 196: AQiEJ63Yc3Y A944 99,1
Error in line 225: AQiEJ63Yc3Y S752 -2,5
Error in line 226: Cy8oFN9b1O A944 61,68
Error in line 216: AQiEJ63Yc3Y S752 77,2
Error in line 234: AQiEJ63Yc3Y A944 -1,3
Error in line 236: Cy8oFN9b1O A944 110,6
Error in line 244: AQiEJ63Yc3Y S838 92,91
Error in line 246: IgXpQ A161 1,57
